--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -8,5 +8,16 @@
     <string>*</string>
     <key>PlexFrameworkVersion</key>
     <string>2</string>
+    <key>PlexMediaContainer</key>
+    <array>
+        <string>Flash</string>
+    </array>
+    <key>PlexClientCapabilities</key>
+    <dict>
+        <key>protocols</key>
+        <array>
+            <string>webkit</string>
+        </array>
+    </dict>
 </dict>
 </plist>
