--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -10,6 +10,7 @@
         <key>URLPatterns</key>
         <array>
           <string>http://m.ustvnow.com/iphone/1/live/viewlive(.*)</string>
+          <string>http://www.ustvnow.com(.*)</string>
         </array>
       </dict>
     </dict>
