--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -9,7 +9,7 @@
         <string>com.plexapp.plugins.ustvnow</string>
         <key>URLPatterns</key>
         <array>
-          <string>http://m.ustvnow.com/iphone/1/live/viewlive(.*)</string>
+          <string>http://m.ustvnow.com/iphone(.*)</string>
           <string>http://www.ustvnow.com(.*)</string>
         </array>
       </dict>
